# Dune-II---The-Maker

./: .editorconfig  .gitignore  ActionManager.cpp  ActionManager.hpp  BUGLIST.TXT  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CSurface.cpp  CSurface.h  Cell.cpp  Cell.hpp  Console.cpp  Console.hpp  Dune 2.VC.db  Dune 2.ncb  Dune 2.sln  Dune 2.sln.old  Dune 2.suo.old  Dune 2.vcproj  Dune 2.vcproj.7.00.old  Dune 2.vcxproj  Dune 2.vcxproj.filters  Entity.cpp  Entity.hpp  FpsCounter.hpp  Game.cpp  Game.hpp  Houses.cpp  Houses.hpp  HowToGetThisAndCompiling.doc  INIReader.cpp  INIReader.h  IniReader.h  LICENSE  LICENSE.md  Makefile.am  Map.cpp  Map.hpp  MapLoader.cpp  (+189 more)
.github/: FUNDING.yml  (+2 more)
dependencies/alfont/: CHANGES.txt  CMakeLists.txt  Makefile  README.txt  alfont.dsw  alfont.ncb  alfont.opt  alfont.sln  alfont_dll.dsp  alfont_dll.plg  alfont_dll.vcxproj  alfont_dll.vcxproj.filters  alfont_static.dsp  alfont_static.plg  alfont_static.vcxproj  alfont_static.vcxproj.filters  fix.bat  fixdos.bat  fixunix.sh  makefile.unx  zip.conf  zip.pl  zipsrc.txt
dependencies/alfont/docs/: ALFONT.txt  AUTHORS.txt
dependencies/alfont/examples/: Makefile  example1.c  example1.dsp  example1.vcxproj  example1.vcxproj.filters
dependencies/alfont/examples/Template/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  example1.lastbuildstate
dependencies/alfont/freetype/: Jamfile  Jamfile.in  Jamrules  Makefile  README  configure  descrip.mms  install
dependencies/alfont/freetype/builds/: detect.mk  freetype.mk  link_dos.mk  link_std.mk  modules.mk  toplevel.mk
dependencies/alfont/freetype/builds/amiga/: README  makefile  smakefile
dependencies/alfont/freetype/builds/ansi/: ansi-def.mk  ansi.mk
dependencies/alfont/freetype/builds/atari/: ATARI.H  FNames.SIC  README.TXT
dependencies/alfont/freetype/builds/beos/: beos-def.mk  beos.mk  detect.mk
dependencies/alfont/freetype/builds/compiler/: ansi-cc.mk  bcc-dev.mk  bcc.mk  gcc-dev.mk  gcc.mk  intelc.mk  unix-lcc.mk  visualage.mk  visualc.mk  watcom.mk  win-lcc.mk
dependencies/alfont/freetype/builds/dos/: detect.mk  dos-def.mk  dos-gcc.mk
dependencies/alfont/freetype/builds/mac/: README  freetype.make
dependencies/alfont/freetype/builds/os2/: detect.mk  os2-def.mk  os2-dev.mk  os2-gcc.mk
dependencies/alfont/freetype/devel/: ft2build.h  ftoption.h
dependencies/alfont/freetype/docs/: CUSTOMIZE  DEBUG  INSTALL  INSTALL.ANY  INSTALL.GNU  INSTALL.UNX  INSTALL.VMS  TODO  TRUETYPE  UPGRADE.UNX  license.txt  modules.txt
dependencies/alfont/freetype/objs/: .cvsignore  README
dependencies/alfont/freetype/src/: Jamfile
dependencies/alfont/freetype/tests/: Jamfile
dependencies/alfont/include/: alfont.h  libcharset.h
dependencies/alfont/lib/msvc/: alfontdll.lib
dependencies/alfont/libiconv/: ChangeLog  INSTALL.generic  Makefile.devel  Makefile.in  Makefile.msvc  Makefile.os2  NEWS  NOTES  PORTS  README  README.win32  THANKS  configure  configure.in  configure.orig
dependencies/alfont/libiconv/autoconf/: acgeneral.m4  aclocal.m4  acspecific.m4  autoconf  autoconf.m4
dependencies/alfont/libiconv/djgpp/: README  README.in  config.bat  config.sed  diffs  fnchange.in  fnchange.lst
dependencies/alfont/libiconv/extras/: ChangeLog  iconv.m4  iconv_string.c
dependencies/alfont/libiconv/include/: iconv.h-in  iconv_h.shared-msvc  iconv_h.static-msvc
dependencies/alfont/libiconv/lib/: .cvsignore  2genaliases.c  Makefile.in  Makefile.msvc  Makefile.orig  armscii_8.h  config.h-in  config.h-msvc  converters.h  converters.orig  cp932.h  euc_jp.h  flags.h  genaliases.c  genflags.c  gentranslit.c  hkscs.h  iconv.c  iconv.orig  java.h  ksc5601.h  loop_unicode.h  loop_wchar.h  sjis.h  tcvn.h  translit.def  translit.h
dependencies/alfont/libiconv/libcharset/: AUTHORS  ChangeLog  INSTALL.generic  INTEGRATE  Makefile.devel  Makefile.in  Makefile.msvc  README  README.win32  config.h-in  config.h-msvc  configure  configure.in  configure.orig
dependencies/alfont/libiconv/man/: Makefile.in  Makefile.os2  iconv.1  iconv.1-html  iconv.3  iconv.3-html  iconv_close.3  iconv_close.3-html  iconv_open.3  iconv_open.3-html
dependencies/alfont/libiconv/os2/: iconv.def
dependencies/alfont/libiconv/src/: Makefile.in  Makefile.msvc  iconv.c
dependencies/alfont/libiconv/tests/: ARMSCII-8.IRREVERSIBLE-TXT  ARMSCII-8.TXT  BIG5-HKSCS.IRREVERSIBLE-TXT  BIG5-HKSCS.TXT  Makefile.in  Makefile.msvc  Makefile.orig  Makefile.os2  TCVN-snippet  cp949.txt  euc-kr.txt  euc-tw.txt  johab.txt  stateful-check  stateful-check.bat  stateful-check.orig  stateless-check  stateless-check.orig  table-from.c  table-to.c  translit-check  translit-check.bat  translit-check.orig
dependencies/alfont/libiconv/tools/: 8bit_tab_to_h.c  Makefile  cjk_tab_to_h.c  cjk_variants.c
dependencies/alfont/libiconv/windows/: iconv.rc
dependencies/alfont/make/: Makefile.dj  Makefile.mgw
dependencies/alfont/src/: alfont.c
dependencies/allegro/: CMakeLists.txt  loadpng.h
dependencies/allegro/addons/logg/: CMakeLists.txt
dependencies/allegro/cmake/: FindDDraw.cmake  FindDInput.cmake  FindDSound.cmake  FindDXGuid.cmake  FindVorbis.cmake
dependencies/allegro/include/: alleggl.h
dependencies/allegro/include/allegro/: base.h
dependencies/allegro/lib/msvc/: alleg.lib
dependencies/allegro/src/: allegro.c  text.c  unicode.c
dependencies/allegro/tests/: CMakeLists.txt
dependencies/allegro/tools/: CMakeLists.txt
dependencies/almp3/: CHANGES.txt  CMakeLists.txt  Makefile  README.txt  almp3.dsw  almp3_dll.dsp  almp3_static.dsp  fix.bat  makefile
dependencies/almp3/decoder/: common.c  interface.c  layer3.c  mpg123.h
dependencies/almp3/docs/: ALMP3.txt  AUTHORS.txt
dependencies/almp3/examples/: Makefile  example.c  example.dsp
dependencies/almp3/lib/msvc/: almp3dll.lib
dependencies/almp3/make/: Makefile.mgw
dependencies/almp3/src/: almp3.c
make/clion/: CMakeLists.txt  create_binary.bat
tests/: CMakeLists.txt
tests/map/: test_MapGeometry.cpp
tests/utils/: test_cExpandingRectangle.cpp  test_cIniUtils.cpp  test_cPoint.cpp  test_cRectangle.cpp  test_d2tm_math.cpp
(+2498 files in other folders)
