add_library(almp3dll SHARED IMPORTED GLOBAL)
set_target_properties(almp3dll PROPERTIES
  IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/${PLATFORM_DIR}/almp3.dll"
  IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/lib/${PLATFORM_DIR}/libalmp3dll.a"
  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/include/
  INTERFACE_LINK_LIBRARIES alleg
)
